Source/WebCore/xml/XMLHttpRequestUpload.cpp
@@ -61,4 +61,14 @@ EventTargetData* XMLHttpRequestUpload::ensureEventTargetData()
     return &m_eventTargetData;
 }
 
+void XMLHttpRequestUpload::dispatchEventAndLoadEnd(PassRefPtr<Event> event)
+{
+    ASSERT(event->type() == eventNames().loadEvent || event->type() == eventNames().abortEvent || event->type() == eventNames().errorEvent || event->type() == eventNames().timeoutEvent);
+
+    dispatchEvent(event);
+    dispatchEvent(XMLHttpRequestProgressEvent::create(eventNames().loadendEvent));
+}
+
+
+
 } // namespace WebCore
